--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -1,50 +1,4 @@
 #textdomain wesnoth-Non_Fatal_Wounds
-#filter special characters #TODO Liches on Northern Rebirth
-[event]
-    name=last_breath
-    id=nfwme_death_filter
-    first_time_only=no
-#ifdef CAMPAIGN_THE_RISE_OF_WESNOTH
-	[filter]
-		id=Wesfolk Leader,Lady Outlaw
-	[/filter]
-
-    [switch]
-        variable=nfw_current_scenario_id
-        [case]
-            value=02_The_Fall
-            [if]
-                {VARIABLE_CONDITIONAL have_lady equals 1}
-                [then]
-                    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Surrender" {NFW_COLOR_RED}}
-                [/then]
-                [else]
-                    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Escape" {NFW_COLOR_RED}}
-                [/else]
-            [/if]
-            {VARIABLE nfw_already_dead yes}
-            {VARIABLE nfw_exclude_unit_id "Lady Outlaw,Wesfolk Leader"}
-        [/case]
-        [else]
-            {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Escape" {NFW_COLOR_RED}}
-            {VARIABLE nfw_already_dead yes}
-            {VARIABLE nfw_exclude_unit_id "Lady Outlaw"}
-        [/else]
-    [/switch]
-#endif
-#ifdef CAMPAIGN_SON_OF_THE_BLACK_EYE
-    [filter_condition]
-        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 08_Silent_Forest}
-		{VARIABLE_CONDITIONAL nfw_first_death not_equals yes}
-    [/filter_condition]
-	[filter]
-		side=2,3
-	[/filter]
-	{VARIABLE nfw_first_death yes}
-	{VARIABLE nfw_already_dead yes}
-	{NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Execution" {NFW_COLOR_RED}}
-#endif
-[/event]
 
 #filter plagueable plagued units
 [event]
@@ -124,7 +78,7 @@
         [else]
             [store_unit_type]
                 type=$unit.type
-                variable=nfwe_wound_type
+                variable=nfwe_unit_type
             [/store_unit_type]
             [fire_event]
                 name=nfwe_rand_wound
@@ -426,7 +380,7 @@
                     [/filter]
                 [/have_location]
                 [or]
-                    {VARIABLE_CONDITIONAL nfwe_wound_type.movement_type equals undeadspirit}
+                    {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type equals undeadspirit}
                 [/or]
                 [then]
                     [fire_event]
@@ -507,7 +461,7 @@
                     [/have_location]
                 [/or]
                 [or]
-                    {VARIABLE_CONDITIONAL nfwe_wound_type.movement_type equals undeadspirit}
+                    {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type equals undeadspirit}
                 [/or]
                 [then]
                     [fire_event]
@@ -538,7 +492,7 @@
                             [/filter]
                         [/have_location]
                         [or]
-                            {VARIABLE_CONDITIONAL nfwe_wound_type.movement_type equals undeadspirit}
+                            {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type equals undeadspirit}
                         [/or]
                     [/not]
                 [/and]
@@ -568,7 +522,7 @@
                     [/filter]
                 [/have_location]
                 [or]
-                    {VARIABLE_CONDITIONAL nfwe_wound_type.movement_type equals undeadspirit}
+                    {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type equals undeadspirit}
                 [/or]
                 [then]
                     [fire_event]
@@ -931,7 +885,7 @@
             [if]
                 {NFW_undead_ENABLED}
                 [and]
-                    {VARIABLE_CONDITIONAL nfwe_wound_type.movement_type not_equals undeadspirit}
+                    {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
                 [/and]
                 [and]
                     [not]
@@ -949,7 +903,7 @@
                 [elseif]
 				   {NFW_undead_ENABLED}
 					[and]
-						{VARIABLE_CONDITIONAL nfwe_wound_type.movement_type not_equals undeadspirit}
+						{VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
 					[/and]
 					[and]
 						[not]
@@ -1156,7 +1110,7 @@
 					[/have_location]
                 [/or]
 				[or]
-					{VARIABLE_CONDITIONAL nfwe_wound_type.movement_type equals undeadspirit}
+					{VARIABLE_CONDITIONAL nfwe_unit_type.movement_type equals undeadspirit}
 				[/or]
 				[or]
 					[have_location]
