--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -1,10 +1,10 @@
-
+#kill already death units
 [event]
-    name=start
+    name=prestart,start
     id=nfwme_kill_dead_units
     first_time_only=no
     [kill]
-        trait=nfwme_dead,nfwme_plagued
+        trait=nfw_dead,nfw_plagued
     [/kill]
 [/event]
 
