--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -315,11 +315,10 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you o
 
 #define NFW_dead_WOUND
 
-    #causes lua error when sides other than side 1 get it
     [modify_unit]
         {FILTER_EVENT_UNIT}
         [trait]
-            id=nfwme_dead
+            id=nfw_dead
             male_name="<span color='#DA0000'>"+_"dead"+"</span>"
             female_name="<span color='#DA0000'>"+_"female^dead"+"</span>"
         [/trait]
@@ -334,7 +333,7 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you o
     [modify_unit]
         {FILTER_EVENT_UNIT}
         [trait]
-            id=nfwme_plagued
+            id=nfw_plagued
             male_name="<span color='#DA0000'>"+_"plagued"+"</span>"
             female_name="<span color='#DA0000'>"+_"female^plagued"+"</span>"
         [/trait]
