--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -10,6 +10,7 @@
     {VARIABLE nfw_exclude_unit_id "Methor"}
 [/event]
 #endif
+
 #ifdef CAMPAIGN_NORTHERN_REBIRTH
 [event]
     name=prestart
@@ -17,6 +18,7 @@
     {VARIABLE nfw_exclude_unit_id "Sister Thera,Father Morvin"}
 [/event]
 #endif
+
 #ifdef CAMPAIGN_UNDER_THE_BURNING_SUNS
 [event]
     name=prestart
@@ -128,6 +130,40 @@
             [/set_variable]
         [/case]
 #endif
+#ifdef CAMPAIGN_EASTERN_INVASION
+        [case]
+            value=12_Evacuation
+			[message]
+				speaker=narrator
+				message= _ "<b><i>Non-Fatal Wounds:</i></b> Choose if you want units stranded on the other side of the bridge to always receive death wound or not. Units still on the recall list will die if the bridge is blown up. The rest will receive a wound according to the settings."
+				image="units/human-loyalists/duelist-die5.png"
+				[option]
+					label=_ "Kill all units stranded on the other side of the bridge"
+					default=yes
+					[command]
+						[set_variable]
+							name=nfw_kill_stranded
+							value=yes
+						[/set_variable]
+					[/command]
+				[/option]
+				[option]
+					label=_ "Continues normal Non-Fatal Wounds behavior"
+					# no action, just leave the NFW enabled
+				[/option]
+			[/message]
+        [/case]
+#endif
+#ifdef CAMPAIGN_SON_OF_THE_BLACK_EYE
+        [case]
+            value=10_Saving_Inarix
+			[message]
+				speaker=narrator
+				message= _ "<b><i>Non-Fatal Wounds:</i></b> All units stranded on the other side of the bridge, and the unit that sacrifices itself to blow the bridge up, will receive a death wound."
+				image="units/human-loyalists/duelist-die5.png"
+			[/message]
+        [/case]
+#endif
     [/switch]
 [/event]
 
@@ -163,7 +199,92 @@
         [/event]
     [/event]
 [/event]
+
+[event]
+    name=last_breath
+    id=nfw_lady_filter
+    first_time_only=no
+	[filter]
+		id=Wesfolk Leader,Lady Outlaw
+	[/filter]
+
+    [switch]
+        variable=nfw_current_scenario_id
+        [case]
+            value=02_The_Fall
+            [if]
+                {VARIABLE_CONDITIONAL have_lady equals 1}
+                [then]
+                    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Surrender" {NFW_COLOR_RED}}
+                [/then]
+                [else]
+                    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Escape" {NFW_COLOR_RED}}
+                [/else]
+            [/if]
+            {VARIABLE nfw_already_dead yes}
+            {VARIABLE nfw_exclude_unit_id "Lady Outlaw,Wesfolk Leader"}
+        [/case]
+        [else]
+            {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Escape" {NFW_COLOR_RED}}
+            {VARIABLE nfw_already_dead yes}
+            {VARIABLE nfw_exclude_unit_id "Lady Outlaw"}
+        [/else]
+    [/switch]
+[/event]
 #endif
+
+#filter special characters #TODO Liches on Northern Rebirth
+
+#ifdef CAMPAIGN_SON_OF_THE_BLACK_EYE
+[event]
+    name=last_breath
+    id=nfw_execution_filter
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 08_Silent_Forest}
+		{VARIABLE_CONDITIONAL nfw_first_death not_equals yes}
+    [/filter_condition]
+	[filter]
+		side=2,3
+	[/filter]
+	{VARIABLE nfw_first_death yes}
+	{VARIABLE nfw_already_dead yes}
+	{NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Execution" {NFW_COLOR_RED}}
+[/event]
+
+[event]
+	name=last_breath
+	id=nfw_bridge_sacrifice
+	first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 10_Saving_Inarix}
+        {VARIABLE_CONDITIONAL unit_detonating_says not_equals $nfw_empty_variable}
+    [/filter_condition]
+	[filter]
+		side=1
+		x,y=21,13
+	[/filter]
+	{VARIABLE nfw_bridge_destroyed yes}
+[/event]
+
+[event]
+	name=last_breath
+	id=nfw_bridge_abandoned
+	first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 10_Saving_Inarix}
+        {VARIABLE_CONDITIONAL nfw_bridge_destroyed equals yes}
+    [/filter_condition]
+	[filter]
+		side=1
+	[/filter]
+	{NFW_dead_WOUND}
+	{VARIABLE nfw_already_dead yes}
+	{VARIABLE nfw_no_dialog yes}
+[/event]
+#endif
+
+
 
 # LoW's scenario Costly Revenge is meant to kill off many of the player's own elves, before those elves become the other side of the elvish civil war. In single-player mode, give the player an option to disable the NFW mod near the end of that scenario, late enough that they'll be able to reload the autosave once they find out what the next battle is.
 
@@ -330,6 +451,26 @@
             [/event]
         [/case]
     [/switch]
+[/event]
+#endif
+
+#ifdef CAMPAIGN_EASTERN_INVASION
+[event]
+	name=last_breath
+	id=nfw_bridge_destroyed
+	first_time_only=no
+	[filter_condition]
+		{VARIABLE_CONDITIONAL nfw_current_scenario_id equals 12_Evacuation}
+		{VARIABLE_CONDITIONAL nfw_kill_stranded equals yes}
+		[have_location]
+			x=8
+			y=18
+			terrain=Wo
+		[/have_location]
+	[/filter_condition]
+	{NFW_dead_WOUND}
+	{VARIABLE nfw_already_dead yes}
+	{VARIABLE nfw_no_dialog yes}
 [/event]
 #endif
 
