--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -26,7 +26,8 @@
         speaker=narrator
         message="<b>"+_"Activate Wounds"+" → "+"</b>"+_"Activate or deactivate random wounds. If you deactivate, the units will disappear without any message and will return in the next scenario unchanged (except in special cases). If you choose to allow lose plagued units, they will disappear forever, since they were converted by the enemy."+"
 
-"+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"        "+_"(0 = Activated, 1 = Deactivated, 2 = Deactivated but with plague losses)"
+"+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
+ "+_"(0 = Activated, 1 = Deactivated, 2 = Deactivated but with plague losses)"
         side_for=$side_number
         image="units/human-loyalists/duelist-die5.png"
         [option]
