--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -36,6 +36,9 @@
     name=prestart
     {CLEAR_VARIABLE nfw_wounded}
 	{CLEAR_VARIABLE nfw_first_death}
+	{CLEAR_VARIABLE nfw_no_dialog}
+	{CLEAR_VARIABLE nfw_bridge_destroyed}
+	{CLEAR_VARIABLE nfw_kill_stranded}	
 [/event]
 
 [event]
@@ -55,6 +58,7 @@
     first_time_only=no
     [filter_condition]
         {NFW_wounds_ENABLED}
+		{VARIABLE_CONDITIONAL nfw_no_dialog not_equals yes}
     [/filter_condition]
     [filter]
         {EVENT_UNIT}
@@ -70,7 +74,7 @@
         [have_location]
             {EVENT_UNIT}
             [filter]
-                trait=nfwme_dead
+                trait=nfw_dead
             [/filter]
         [/have_location]
         [then]
@@ -129,7 +133,7 @@
             [have_location]
                 {EVENT_UNIT}
                 [filter]
-                    trait=nfwme_plagued
+                    trait=nfw_plagued
                 [/filter]
             [/have_location]
             [then]
@@ -180,7 +184,7 @@
                 [have_location]
                     {EVENT_UNIT}
                     [filter]
-                        trait=nfwme_dead,nfwme_plagued
+                        trait=nfw_dead,nfw_plagued
                     [/filter]
                 [/have_location]
             [/not]
