--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -97,7 +97,7 @@
     name=nfwe_rand_wound
     id=nfwe_rand_wound_id
     first_time_only=no
-    {VARIABLE_OP rand_wound rand(1..200)}
+    {VARIABLE_OP rand_wound rand(1..220)}
     [switch]
         variable=rand_wound
         [case]
@@ -633,41 +633,6 @@
             [/if]
         [/case]
         [case]
-            value=101,102,103,104,105,132,190,191,192,193,194,195,196,197,198,199,200
-            [if]
-                [have_location]
-                    {EVENT_UNIT}
-                    [filter]
-                        status=poisoned
-                    [/filter]
-                [/have_location]
-                [and]
-                    [not]
-                        [have_location]
-                            {EVENT_UNIT}
-                            [filter]
-                                ability=infection_display
-                            [/filter]
-                        [/have_location]
-                    [/not]
-                [/and]
-                [then]
-                    {NFW_infection_WOUND}
-                [/then]
-                [else]
-                    [fire_event]
-                        name=nfwe_rand_wound
-                        [primary_unit]
-                            {EVENT_UNIT}
-                        [/primary_unit]
-                        [secondary_unit]
-                            {EVENT_SECOND_UNIT}
-                        [/secondary_unit]
-                    [/fire_event]
-                [/else]
-            [/if]
-        [/case]
-        [case]
             value=20
             [if]
                 [have_location]
@@ -742,7 +707,7 @@
             [/if]
         [/case]
         [case]
-            value=23,121,122,131
+            value=23,121,122
             [if]
                 [have_location]
                     {EVENT_UNIT}
@@ -796,7 +761,7 @@
             [/if]
         [/case]
         [case]
-            value=47,124,125,126,127,128,176,177,178,179,180,181,182,183,184,185,186,187,188,189
+            value=47,101,102,103,104,105,124,125,126,127,128,132,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200
             [if]
                 [have_location]
                     {EVENT_UNIT}
@@ -817,6 +782,27 @@
                 [then]
                     {NFW_sick_WOUND}
                 [/then]
+                [elseif]
+					[have_location]
+						{EVENT_UNIT}
+						[filter]
+							status=poisoned
+						[/filter]
+					[/have_location]
+					[and]
+						[not]
+							[have_location]
+								{EVENT_UNIT}
+								[filter]
+									ability=infection_display
+								[/filter]
+							[/have_location]
+						[/not]
+					[/and]
+					[then]
+						{NFW_infection_WOUND}
+					[/then]
+                [/elseif]
                 [else]
                     [fire_event]
                         name=nfwe_rand_wound
@@ -1046,7 +1032,7 @@
             [/if]
         [/case]
         [case]
-            value=141,142,143
+            value=141,142,143,131
             [if]
                 [have_location]
                     {EVENT_UNIT}
@@ -1073,7 +1059,7 @@
             [/if]
         [/case]
         [case]
-            value=144,145,146,147,148,149,150
+            value=144,145,146,147,148,149,150,201,202,203,204,205,206,207,208,209,210,211,212,213,214,215,216,217,218,219,220
             [if]
                 [have_location]
                     {EVENT_UNIT}
