Agoraphobia to half

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -128,7 +128,102 @@
             [/if]
         [/case]
         [case]
-            value=2,3,69,119
+            value=2,3
+            [if]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+						race=mechanical
+					[/filter]
+				[/have_location]
+                [then]
+                    [fire_event]
+                        name=nfwe_rand_wound
+                        [primary_unit]
+                            {EVENT_UNIT}
+                        [/primary_unit]
+                        [secondary_unit]
+                            {EVENT_SECOND_UNIT}
+                        [/secondary_unit]
+                    [/fire_event]
+				[/then]
+				[elseif]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=A*,D*
+					[/have_location]
+					[then]
+						{NFW_fear_of_desert_WOUND}
+					[/then]
+				[/elseif]
+				[elseif]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=F*,T*
+					[/have_location]
+					[then]
+						{NFW_fear_of_plant_WOUND}
+					[/then]
+				[/elseif]
+				[elseif]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=U*
+					[/have_location]
+					[then]
+						{NFW_fear_of_cave_WOUND}
+					[/then]
+				[/elseif]
+				[elseif]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=M*,H*
+					[/have_location]
+					[then]
+						{NFW_fear_of_hight_WOUND}
+					[/then]
+				[/elseif]
+				[elseif]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=W*,S*
+					[/have_location]
+					[then]
+						{NFW_fear_of_water_WOUND}
+					[/then]
+				[/elseif]
+				[elseif]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=G*,R*
+					[/have_location]
+					[and]
+						[not]
+							[have_location]
+								{EVENT_UNIT}
+								terrain=*^V*,*^P*,*^E*,*^F*,*^T*,*^B*
+							[/have_location]
+						[/not]
+					[/and]
+					[then]
+						{NFW_fear_of_open_WOUND}
+					[/then]
+				[/elseif]
+                [else]
+                    [fire_event]
+                        name=nfwe_rand_wound
+                        [primary_unit]
+                            {EVENT_UNIT}
+                        [/primary_unit]
+                        [secondary_unit]
+                            {EVENT_SECOND_UNIT}
+                        [/secondary_unit]
+                    [/fire_event]
+				[/else]
+            [/if]
+        [/case]
+        [case]
+            value=69,119
             [if]
 				[have_location]
 					{EVENT_UNIT}
@@ -190,23 +285,6 @@
 					[/have_location]
 					[then]
 						{NFW_fear_of_hight_WOUND}
-					[/then]
-				[/elseif]
-				[elseif]
-					[have_location]
-						{EVENT_UNIT}
-						terrain=G*,R*
-					[/have_location]
-					[and]
-						[not]
-							[have_location]
-								{EVENT_UNIT}
-								terrain=*^V*,*^P*,*^E*,*^F*,*^T*,*^B*
-							[/have_location]
-						[/not]
-					[/and]
-					[then]
-						{NFW_fear_of_open_WOUND}
 					[/then]
 				[/elseif]
 				[else]
