Floating text with scroll

--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -20,7 +20,7 @@
     color="0,255,0"
 #enddef
 
-#define NFW_FLOAT_TEXT  X Y MSG COLOR
+#define NFW_FLOAT_TEXT X Y MSG COLOR
     [floating_text]
         x,y={X},{Y}
         {COLOR}
@@ -28,12 +28,24 @@
     [/floating_text]
 #enddef
 
-#define NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT MSG COLOR
-    {NFW_FLOAT_TEXT $x1 $y1 {MSG} {COLOR}}
+#define NFW_FLOAT_TEXT_SCROLL X Y MSG COLOR
+	[scroll]
+		x,y={X},{Y}
+		check_fogged=yes
+	[/scroll]
+    [floating_text]
+        x,y={X},{Y}
+        {COLOR}
+        text={MSG}
+    [/floating_text]
 #enddef
 
-#define NFW_FLOAT_TEXT_SECOND_UNIT MSG COLOR
-    {NFW_FLOAT_TEXT $x2 $y2 {MSG} {COLOR}}
+#define NFW_FLOAT_TEXT X Y MSG COLOR
+    [floating_text]
+        x,y={X},{Y}
+        {COLOR}
+        text={MSG}
+    [/floating_text]
 #enddef
 
 #define NFW_FILTER_HEROES
