--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -212,7 +212,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_water
             [/remove_object]
-            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from Aquaphobia" {NFW_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from Aquaphobia" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -240,7 +240,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_hight
             [/remove_object]
-            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from Acrophobia" {NFW_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from Acrophobia" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -268,7 +268,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_desert
             [/remove_object]
-            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from Erimophobia" {NFW_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from Erimophobia" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -296,7 +296,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_cave
             [/remove_object]
-            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from Claustrophobia" {NFW_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from Claustrophobia" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -324,7 +324,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_plant
             [/remove_object]
-            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from Dendrophobia" {NFW_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from Dendrophobia" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -352,7 +352,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_open
             [/remove_object]
-            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from Agoraphobia" {NFW_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from Agoraphobia" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -389,7 +389,7 @@
                         {EVENT_SECOND_UNIT}
                         object_id=coward
                     [/remove_object]
-                    {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from Cowardice" {NFW_COLOR_GREEN}}
+                    {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from Cowardice" {NFW_COLOR_GREEN}}
                 [/then]
             [/if]
         [/case]
@@ -423,7 +423,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_weapon
             [/remove_object]
-            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of $second_unit.variables.scary_weapon_translated" {NFW_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from fear of $second_unit.variables.scary_weapon_translated" {NFW_COLOR_GREEN}}
             {CLEAR_VARIABLE $second_unit.variables.scary_weapon}
             {CLEAR_VARIABLE $second_unit.variables.scary_weapon_translated}
         [/case]
@@ -454,7 +454,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_light
             [/remove_object]
-            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of light" {NFW_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from fear of light" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -483,7 +483,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_dark
             [/remove_object]
-            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of dark" {NFW_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from fear of dark" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -511,7 +511,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_fog
             [/remove_object]
-            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of fog" {NFW_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from fear of fog" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
