--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -144,7 +144,7 @@
 			increase=8
 		[/effect]
 	[/modify_unit]
-    {NFW_FLOAT_TEXT_SECOND_UNIT "8" color="0,255,0"}
+    {NFW_FLOAT_TEXT $x2 $y2 "8" color="0,255,0"}
 [/event]
 
 #Heals water elementals on water or cold terrains
@@ -191,7 +191,7 @@
 			trait=nfw_elemental_water
 		[/have_unit]
 		[then]
-			{NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT "2" color="0,255,0"}
+			{NFW_FLOAT_TEXT $x1 $y1 "2" color="0,255,0"}
 		[/then]
 	[/if]
 	[if]
@@ -200,7 +200,7 @@
 			trait=nfw_elemental_water
 		[/have_unit]
 		[then]
-			{NFW_FLOAT_TEXT_SECOND_UNIT "2" color="0,255,0"}
+			{NFW_FLOAT_TEXT $x2 $y2 "2" color="0,255,0"}
 		[/then]
 	[/if]
 [/event]
@@ -249,7 +249,7 @@
 			trait=nfw_elemental_fire
 		[/have_unit]
 		[then]
-			{NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT "4" color="0,255,0"}
+			{NFW_FLOAT_TEXT $x1 $y1 "4" color="0,255,0"}
 		[/then]
 	[/if]
 	[if]
@@ -258,7 +258,7 @@
 			trait=nfw_elemental_fire
 		[/have_unit]
 		[then]
-			{NFW_FLOAT_TEXT_SECOND_UNIT "4" color="0,255,0"}
+			{NFW_FLOAT_TEXT $x2 $y2 "4" color="0,255,0"}
 		[/then]
 	[/if]
 [/event]
@@ -307,7 +307,7 @@
 			trait=nfw_elemental_earth
 		[/have_unit]
 		[then]
-			{NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT "2" color="0,255,0"}
+			{NFW_FLOAT_TEXT $x1 $y1 "2" color="0,255,0"}
 		[/then]
 	[/if]
 	[if]
@@ -316,7 +316,7 @@
 			trait=nfw_elemental_earth
 		[/have_unit]
 		[then]
-			{NFW_FLOAT_TEXT_SECOND_UNIT "2" color="0,255,0"}
+			{NFW_FLOAT_TEXT $x2 $y2 "2" color="0,255,0"}
 		[/then]
 	[/if]
 [/event]
@@ -365,7 +365,7 @@
 			trait=nfw_elemental_arcane
 		[/have_unit]
 		[then]
-			{NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT "8" color="0,255,0"}
+			{NFW_FLOAT_TEXT $x1 $y1 "8" color="0,255,0"}
 		[/then]
 	[/if]
 	[if]
@@ -374,7 +374,7 @@
 			trait=nfw_elemental_arcane
 		[/have_unit]
 		[then]
-			{NFW_FLOAT_TEXT_SECOND_UNIT "8" color="0,255,0"}
+			{NFW_FLOAT_TEXT $x2 $y2 "8" color="0,255,0"}
 		[/then]
 	[/if]
 [/event]
@@ -423,7 +423,7 @@
 			trait=nfw_elemental_air
 		[/have_unit]
 		[then]
-			{NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT "4" color="0,255,0"}
+			{NFW_FLOAT_TEXT $x1 $y1 "4" color="0,255,0"}
 		[/then]
 	[/if]
 	[if]
@@ -432,7 +432,7 @@
 			trait=nfw_elemental_air
 		[/have_unit]
 		[then]
-			{NFW_FLOAT_TEXT_SECOND_UNIT "4" color="0,255,0"}
+			{NFW_FLOAT_TEXT $x2 $y2 "4" color="0,255,0"}
 		[/then]
 	[/if]
 [/event]
