--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -7,7 +7,7 @@
             set=0
         [/effect]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Memory Loss" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Memory Loss" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_broken_arm_WOUND
@@ -49,7 +49,7 @@
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Broken Arm" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Broken Arm" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_broken_wing_WOUND
@@ -88,7 +88,7 @@
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Broken Wing" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Broken Wing" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_broken_leg_WOUND
@@ -127,7 +127,7 @@
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Broken Leg" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Broken Leg" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_broken_rib_WOUND
@@ -169,7 +169,7 @@
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Broken Rib" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Broken Rib" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_burned_WOUND
@@ -212,7 +212,7 @@
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Burn" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Burn" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_captured_WOUND
@@ -243,7 +243,7 @@
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Capture" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Capture" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_concussion_WOUND
@@ -284,7 +284,7 @@
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Concussion" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Concussion" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_Coward_WOUND
@@ -310,7 +310,7 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you o
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Cowardice" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Cowardice" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_dead_WOUND
@@ -324,7 +324,7 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you o
         [/trait]
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Death" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Death" {NFW_COLOR_RED}}
 
 #enddef
 
@@ -339,7 +339,7 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you o
         [/trait]
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Lost" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Lost" {NFW_COLOR_RED}}
 
 #enddef
 
@@ -392,7 +392,7 @@ Face your fears and defeat them to try to overcome them."
         [/set_variable]
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Scared of $second_weapon.description" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Scared of $second_weapon.description" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_fear_of_water_WOUND
@@ -422,7 +422,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Aquaphobia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Aquaphobia" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_fear_of_hight_WOUND
@@ -450,7 +450,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Acrophobia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Acrophobia" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_fear_of_desert_WOUND
@@ -478,7 +478,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Erimophobia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Erimophobia" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_fear_of_cave_WOUND
@@ -505,7 +505,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Claustrophobia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Claustrophobia" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_fear_of_plant_WOUND
@@ -533,7 +533,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Dendrophobia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Dendrophobia" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_fear_of_open_WOUND
@@ -560,7 +560,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Agoraphobia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Agoraphobia" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_fear_of_dark_WOUND
@@ -588,7 +588,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Scared of the dark" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Scared of the dark" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_fear_of_light_WOUND
@@ -616,7 +616,7 @@ Face your fears to try and overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Scared of the light" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Scared of the light" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_fear_of_fog_WOUND
@@ -646,7 +646,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Nebulaphobia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Nebulaphobia" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_frostbite_WOUND
@@ -688,7 +688,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Frostbite" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Frostbite" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_gash_WOUND
@@ -730,7 +730,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Gash" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Gash" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_infection_WOUND
@@ -766,7 +766,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Infection" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Infection" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_insane_WOUND
@@ -816,7 +816,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Insanity" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Insanity" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_maimed_WOUND
@@ -865,7 +865,7 @@ Face your fears to try to overcome them."
         {FILTER_EVENT_UNIT}
         hitpoints=0
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Mutilation" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Mutilation" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_necrosis_WOUND
@@ -909,7 +909,7 @@ Arcane resistance -30%"
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Necrosis" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Necrosis" {NFW_COLOR_RED}}
 #enddef
 
 
@@ -945,7 +945,7 @@ Arcane resistance -30%"
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Amnesia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Amnesia" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_sick_WOUND
@@ -981,7 +981,7 @@ Arcane resistance -30%"
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Sickness" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Sickness" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_wild_magic_WOUND
@@ -1031,7 +1031,7 @@ Arcane resistance -30%"
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Wild Magic" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Wild Magic" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_damaged_WOUND
@@ -1089,7 +1089,7 @@ Arcane resistance -30%"
         {FILTER_EVENT_UNIT}
 		hitpoints=0
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Damage" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Damage" {NFW_COLOR_RED}}
 #enddef
 
 
@@ -1123,7 +1123,7 @@ All damage is reduced by 20% and blade resistance is lowered by 30%. You will ne
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Paper Cut" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Paper Cut" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_stepped_on_lego_WOUND
@@ -1153,7 +1153,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Stepped on Lego" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Stepped on Lego" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_TRAIT_UNDEAD
@@ -1307,7 +1307,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 		hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Ghost" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Ghost" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_undead_corpse_WOUND
@@ -1512,7 +1512,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 		hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Zombie" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Zombie" {NFW_COLOR_RED}}
     {CLEAR_VARIABLE side_color}
 #enddef
 
@@ -1580,7 +1580,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 		hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Fire elemental" color="255,100,0"}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Fire elemental" color="255,100,0"}
 #enddef
 
 #define NFW_elemental_water_WOUND
@@ -1655,7 +1655,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 		hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Water elemental" color="0,100,255"}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Water elemental" color="0,100,255"}
 #enddef
 
 #define NFW_elemental_poison_WOUND
@@ -1729,7 +1729,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 		hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Poison elemental" color="0,175,0"}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Poison elemental" color="0,175,0"}
 #enddef
 
 #define NFW_elemental_arcane_WOUND
@@ -1795,7 +1795,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 		hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Arcane elemental" color="150,50,150"}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Arcane elemental" color="150,50,150"}
 #enddef
 
 #define NFW_elemental_earth_WOUND
@@ -1865,7 +1865,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 		hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Earth elemental" color="125,60,0"}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Earth elemental" color="125,60,0"}
 #enddef
 
 #define NFW_elemental_air_WOUND
@@ -1937,5 +1937,5 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 		hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Air elemental" color="0,255,255"}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Air elemental" color="0,255,255"}
 #enddef
