--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -215,17 +215,17 @@
             [if]
                 {VARIABLE_CONDITIONAL have_lady equals 1}
                 [then]
-                    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Surrender" {NFW_COLOR_RED}}
+                    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Surrender" {NFW_COLOR_RED}}
                 [/then]
                 [else]
-                    {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Escape" {NFW_COLOR_RED}}
+                    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Escape" {NFW_COLOR_RED}}
                 [/else]
             [/if]
             {VARIABLE nfw_already_dead yes}
             {VARIABLE nfw_exclude_unit_id "Lady Outlaw,Wesfolk Leader"}
         [/case]
         [else]
-            {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Escape" {NFW_COLOR_RED}}
+            {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Escape" {NFW_COLOR_RED}}
             {VARIABLE nfw_already_dead yes}
             {VARIABLE nfw_exclude_unit_id "Lady Outlaw"}
         [/else]
@@ -249,7 +249,22 @@
 	[/filter]
 	{VARIABLE nfw_first_death yes}
 	{VARIABLE nfw_already_dead yes}
-	{NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Execution" {NFW_COLOR_RED}}
+	{NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Execution" {NFW_COLOR_RED}}
+[/event]
+
+[event]
+    name=last_breath
+    id=nfw_frostbite_filter
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 14_Back_Home}
+    [/filter_condition]
+	[filter]
+		id=Thelarion
+	[/filter]
+	{VARIABLE nfw_first_death yes}
+	{VARIABLE nfw_already_dead yes}
+	{NFW_frostbite_WOUND}
 [/event]
 
 [event]
