--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -210,7 +210,7 @@
 * <b><i>Poison elemental</i></b> +30% pierce resistance +All attacks changed to pierce with poison -30% damage -40% HP > Units with pierce or poison attacks, or wounded with pierce or poison = 8 HP when attacked with poison, only on defense, once per attack
 * <b><i>Arcane elemental</i></b> +30% arcane resistance +All attacks changed to arcane -25% damage -25% HP > Units with arcane attacks, or wounded with arcane, or on a terrain with ethereal abyss = 8 HP when either the attacker or defender are in a terrain with ethereal abyss, once per attack
 * <b><i>Earth elemental</i></b> +30% impact resistance +All attacks changed to impact -20% damage -25% HP -10% MP > Units with impact attacks, or wounded with impact, or on a cave terrain = 2 HP when either the attacker or defender are in a cave terrain, once per attack
-* <b><i>Air elemental</i></b> +40% blade +20% pierce +20% impact resistance +All attacks changed to blade -30% damage -50% HP > Units with blade attacks, or birds, falcons, gryphon, bats, or wounded with blade, or on a terrain with windmill = 4 HP when either the attacker or defender are in a terrain with windmill, once per attack
+* <b><i>Air elemental</i></b> +40% blade +20% pierce +20% impact resistance +All attacks changed to blade +10% MP -30% damage -50% HP > Units with blade attacks, or birds, falcons, gryphon, bats, or wounded with blade, or on a terrain with windmill = 4 HP when either the attacker or defender are in a terrain with windmill, once per attack
 * <b><i>All elementals</i></b> > Mechanical, undead, ghosts, spirits and elemental units can't receive any elemental wound, and no unit can received it twice"
                     image="units/human-loyalists/duelist-die5.png"
 					{NFW_MENU_EXIT}
