scroll_to_unit bettter

--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -29,10 +29,10 @@
 #enddef
 
 #define NFW_FLOAT_TEXT_SCROLL X Y MSG COLOR
-	[scroll]
+	[scroll_to_unit]
 		x,y={X},{Y}
 		check_fogged=yes
-	[/scroll]
+	[/scroll_to_unit]
     [floating_text]
         x,y={X},{Y}
         {COLOR}
