--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -29,7 +29,7 @@
 
 #handles wounds with randomization
 [event]
-    name=turn end
+    name=new turn
     id=nfwme_random_status
     first_time_only=no
     {VARIABLE_OP rand_status rand(1..10)}
